--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -164,7 +164,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and Erman Acar\inst{2} \and Kai Eckert\inst{2}}
+\author{Thomas Bosch\inst{1} \and Erman Acar\inst{2} \and Kai Eckert\inst{3}}
 %
 \authorrunning{XXXXX} % abbreviated author list (for running head)
 %
@@ -173,7 +173,10 @@
 \email{thomas.bosch@gesis.org},\\ 
 \and
 University of Mannheim, Germany \\
-\email{\{erman,kai\}@informatik.uni-mannheim.de} 
+\email{erman@informatik.uni-mannheim.de} 
+\and
+Stuttgart Media University, Germany \\
+\email{eckert@hdm-stuttgart.de} 
 }
 
 \maketitle              % typeset the title of the contribution
