--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -323,8 +323,9 @@ we apply the developed classification system to several and different vocabulari
 A complex and complete real world running example from the \emph{SBE} domain serves to prove the claim that the developed classification system perfectly applies for diverse vocabularies.
 %, i.e., that it does not matter which vocabularies are used to represent (meta)data and for which domains constraints are defined.
 We describe why RDF validation is important for the \emph{SBE} community (section \ref{motivation}), 
-how data in tabular format and metadata on person-level data sets, aggregated data sets, and thesauri are represented in RDF, and how therefore reused vocabularies are interrelated (section \ref{rdf-representation}).
-We explain how \emph{SBE} (meta)data is validated against constraints, instantiated from constraint types organized in the classification system, to ensure high quality of and trust in (meta)data.
+how data in tabular format and metadata on person-level data sets, aggregated data sets, and thesauri are represented in RDF, 
+how therefore reused vocabularies are interrelated (section \ref{rdf-representation}),
+and how \emph{SBE} (meta)data is validated against constraints of different constraint types (sections \ref{classification} - \ref{complex-constraint-types}).
 
 We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple and different vocabularies to get an understanding 
 (1) which sets of constraint types (on different levels of complexity) and 
