--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -268,9 +268,9 @@ The \textbf{contribution} of this paper is the development of a system
 By defining a huge amount of constraints of the majority of constraint types
 to validate data sets from the community around research data for the \emph{social, behavioural, and economic (SBE) sciences},  
 %we apply the developed classification system to several and different vocabularies from the community around research data for the \emph{social, behavioural, and economic (SBE) sciences} in order to
-we prove the claim that the developed classification system perfectly applies vocabulary-independent and therefore to prove its generality.
+we prove the claim that the proposed classification system perfectly applies vocabulary-independent and therefore we prove its generality.
 
-We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple and different vocabularies to get an understanding 
+We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple vocabularies to get an understanding 
 (1) which sets of constraint types (on different levels of complexity) and 
 (2) which sets of constraints (associated with particular severity levels) encompass the constraints causing the most/fewest constraint violations.
 
@@ -326,8 +326,7 @@ We describe why RDF validation is important for the \emph{SBE} community (sectio
 how data in tabular format and metadata on person-level data sets, aggregated data sets, and thesauri are represented in RDF, 
 how therefore reused vocabularies are interrelated (section \ref{rdf-representation}),
 and how \emph{SBE} (meta)data is validated against constraints of different constraint types (sections \ref{classification} - \ref{complex-constraint-types}).
-
-We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple and different vocabularies to get an understanding 
+We evaluated the (meta)data quality of large real world data sets (more than 4.2 billion triples and 15 thousand data sets) from the \emph{SBE} domain represented by multiple vocabularies to get an understanding 
 (1) which sets of constraint types (on different levels of complexity) and 
 (2) which sets of constraints (associated with particular severity levels) encompass the constraints causing the most/fewest constraint violations (see section \ref{evaluation}).
 
