--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -288,6 +288,8 @@ and reuse data collected and archived for research \cite{Vardigan2008}.
 %and ICPSR - the largest SBE data archive in the US.
 Increasingly, data professionals, data archives, data libraries, government statisticians (e.g. \url{data.gov}, \url{data.gov.uk}), and national statistical institutes
 are very interested in having their data be discovered and used by exposing their metadata (e.g. about unemployment rates or income) within the Web of Linked Data.
+As DDI-XML documents are validated against diverse XSDs\footnote{\label{fnt:DDI-XSDs}\url{http://www.ddialliance.org/Specification/}} (section \ref{related-work}),
+the \emph{SBE} community is used to have this functionality in the XML world.
 %Recently, members of the \emph{SBE} and Linked Data community developed the \emph{DDI-RDF Discovery Vocabulary (Disco)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}}, 
 %an effort to expose \emph{DDI} metadata within the Web of Linked Data. 
 %For data archives, research institutes, and data libraries,
